[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygbag_network_utils"
version = "0.1.2"
description = "A Python library that provides network utilities for use with pygbag."
readme = "README.md"
authors = [
    { name = "thetechnicker", email = "106349149+thetechnicker@users.noreply.github.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = []  # This will be dynamically populated from requirements.txt

[project.urls]
Homepage = "https://github.com/thetechnicker/pygbag_network_utils"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
